--- a/4-rock-paper-scissors.html
+++ b/4-rock-paper-scissors.html
@@ -6,7 +6,7 @@
     <title>rock paper scissors</title>
 </head>
 <body>
-
+    
     <p>Rock Paper Scissors</p>
     <!-- 1. Generate a random number between 1 and 3
     2. Use the random number to determine the computer's choice.
@@ -89,8 +89,6 @@
     --> 
 
     <p id="result"></p>
-    <script>
-
-    </script>
+    <script> </script>
 </body>
 </html>
