--- a/4-rock-paper-scissors.html
+++ b/4-rock-paper-scissors.html
@@ -6,7 +6,7 @@
     <title>rock paper scissors</title>
 </head>
 <body>
-    
+
     <p>Rock Paper Scissors</p>
     <!-- 1. Generate a random number between 1 and 3
     2. Use the random number to determine the computer's choice.
@@ -17,7 +17,7 @@
     let computerChoice1 = '';
     if (randomNumber1 === 1) {
         computerChoice1 = 'rock';
-    } else if (randomNumber === 2) {
+    } else if (randomNumber1 === 2) {
         computerChoice1 = 'paper';
     } else {
         computerChoice1 = 'scissors';
