--- a/4-rock-paper-scissors.html
+++ b/4-rock-paper-scissors.html
@@ -6,7 +6,24 @@
     <title>rock paper scissors</title>
 </head>
 <body>
-
+<style>
+    body {
+        font-family: Arial, sans-serif;
+        text-align: center;
+        margin-top: 50px;
+    }
+    button {
+        padding: 10px 20px;
+        margin: 10px;
+        font-size: 16px;
+        cursor: pointer;
+    }
+    #result {
+        margin-top: 20px;
+        font-size: 18px;
+        font-weight: bold;
+    }
+</style>
     <p>Rock Paper Scissors</p>
     <!-- 1. Generate a random number between 1 and 3
     2. Use the random number to determine the computer's choice.
