--- a/5.rock-paper-scissors.html
+++ b/5.rock-paper-scissors.html
@@ -28,7 +28,7 @@
             font-weight: bold;
         }
     </style>
-    <p>Rock Paper Scissors</p>
+    <p>Rock Paper Scissors Using If</p>
     <!-- 1. Generate a random number between 1 and 3
     2. Use the random number to determine the computer's choice.
     3. If randomNumber is 1, computer chooses rock; if 2, paper; if 3, scissors.-->
