--- a/todo list/35.todo list.html
+++ b/todo list/35.todo list.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <p>Todo List</p>
@@ -13,7 +14,7 @@
     <button onclick="
     addTodo()">add</button>
 
-    <div class="js-todo-list"></div>
+    <div class="js-todo-list todo-grid"></div>
 
 <script src="script.js"></script>
 </body>
