--- a/todo list/35.todo list.html
+++ b/todo list/35.todo list.html
@@ -12,7 +12,7 @@
     <input type="date" class="js-due-date-input">
 
     <button onclick="
-    addTodo()" class="addButton">add</button>
+    addTodo()" class="addButton">Add</button>
 
     <div class="js-todo-list todo-grid"></div>
 
